Bug 596796 - SVG SMIL: Fix inconsistent state when resetting current interval; r=dholbert; a=roc